<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings"
    android:key="screen">

    <PreferenceCategory
        android:title="@string/long_press_primary_button"
        android:key="home">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/secondary_button_press"
        android:key="extra">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/extra_actions">
        <com.brouken.wear.butcher.NumberPickerPreference
            android:key="autoTimer"
            android:title="@string/auto_timer"
            android:defaultValue="3"
            android:icon="@drawable/ic_timer"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/configuration">
        <ListPreference
            android:key="timeout"
            android:title="@string/timeout"
            android:defaultValue="3000"
            android:icon="@drawable/ic_timeout"
            android:entries="@array/pref_timeout_titles"
            android:entryValues="@array/pref_timeout_values"/>
        <SwitchPreference
            android:key="vibrate"
            android:title="@string/vibrate"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">
        <Preference
            android:title="@string/help"
            android:icon="@drawable/ic_help">
            <intent
                android:targetPackage="com.brouken.wear.butcher"
                android:targetClass="com.brouken.wear.butcher.HelpActivity"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>